Added under construction message

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
 				<div class="text-inner">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
-							<h1 class="to-animate">Co-Regulation (CORE) Lab.</h1>
+							<h1 class="to-animate">PAGE UNDER CONSTRUCTION<br>Co-Regulation (CORE) Lab.</h1>
 							<h2 class="to-animate">We study co-regulation in romantic relationships while utilizing open science ideals. We collaborate around the world, but are located at the <a href="https://www.univ-grenoble-alpes.fr">Université Grenoble Alpes</a>.</h2>
 						</div>
 					</div>
