--- a/README.html
+++ b/README.html
@@ -128,7 +128,8 @@ $(document).ready(function () {
 <p>Basic steps to install/use/make changes:<br />
 1. <a href="https://help.github.com/articles/set-up-git/">Install Git</a> (if necessary – comes on Mac by default)<br />
 2. <a href="https://help.github.com/articles/cloning-a-repository/">Clone</a> (e.g., download the files and create a Git repository on your local hard disk) these two repos locally. Open a <a href="http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line">Terminal</a> (or <a href="https://www.howtogeek.com/235101/10-ways-to-open-the-command-prompt-in-windows-10/">cmd prompt</a>), navigate to where you want the files to be stored (use the ‘cd’ command in Terminal), and run these two commands:<br />
-<code>&quot;git clone https://github.com/co-relab/co-relab_source.git&quot;</code> <code>&quot;git clone https://github.com/co-relab/co-relab.github.io.git&quot;</code></p>
+<code>&quot;git clone https://github.com/co-relab/co-relab_source.git&quot;</code><br />
+<code>&quot;git clone https://github.com/co-relab/co-relab.github.io.git&quot;</code></p>
 <p>This will create two new subdirectories/Git repos: co-relab_source and co-relab.github.io</p>
 <p>You will also need R and R Studio installed.</p>
 <p>Then, navigate on your computer to the source files repo, and open the .rproj file (co-relab_source.rproj) in R Studio. Then open the r script (co-relab_source_rscript.R). Using R Projects eliminates the need to set a working directory each time (it’s automatically set to the folder containing the .rproj file)</p>
