--- a/public/index.html
+++ b/public/index.html
@@ -114,8 +114,10 @@
 				<div class="text-inner">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
-							<h1 class="to-animate"><br><br>Co-Regulation (CORE) Lab.</h1>
+							<h1 class="to-animate">Co-Regulation (CORE) Lab.</h1>
 							<h2 class="to-animate">We study co-regulation in romantic relationships. We study social thermoregulation. We rely on open science ideals. We collaborate with researchers around the world, but are located at the <a href="https://www.univ-grenoble-alpes.fr">Université Grenoble Alpes</a>.</h2>
+							<br>
+							<h2 class="to-animate"><img src="logos.png"></h2>
 						</div>
 					</div>
 				</div>
