Reverting changes to the team section, had done some troubleshooting to try to fix the formatting issue and forgot to revert the text.

--- a/public/index.html
+++ b/public/index.html
@@ -299,10 +299,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 section-heading text-center">
-				<h2 class="to-animate">Our Humans</h2>
+				<h2 class="to-animate">Lab Members</h2>
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 subtext to-animate">
-						<h3>We&rsquo;re an experienced, diverse team of open source coders, writers, and humans.</h3>
+						<h3></h3>
 					</div>
 				</div>
 			</div>
