added in the solid science workshop

--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
 					<h2 class="center-border to-animate">Announcements</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext to-animate">
-							<h3>&bull; Justin Mah (University of Alberta) will be joining the lab as intern in May<br>&bull; Last submitted manuscript that we participated in was for the Psych Science Accelerator: <a href="https://psyarxiv.com/785qu/">https://psyarxiv.com/785qu/</a><br>&bull; Armel Soubeiga (Université Grenoble Alpes) will be joining the lab as an intern in May<br>&bull; Nazanin Kafaee (Western Ontario University) will be joining the lab as intern in 2019!</h3>
+							<h3>&bull;The CORE Lab will organize a <a href="http://www.easp.eu/news/itm/rkts_workshop__solid_science_training_workshop-646.html">solid science training workshop</a>, together with the University of Bordeaux<br>&bull; Justin Mah (University of Alberta) will be joining the lab as intern in May<br>&bull; <a href="https://psyarxiv.com/785qu/">Last submitted manuscript</a> that we participated in was for the Psych Science Accelerator<br>&bull; Armel Soubeiga (Université Grenoble Alpes) will be joining the lab as an intern in May<br>&bull; Nazanin Kafaee (Western Ontario University) will be joining the lab as intern in 2019!</h3>
 						</div>
 					</div>
 				</div>
