--- a/public/index.html
+++ b/public/index.html
@@ -379,6 +379,18 @@
 				</div>
 			</div>
 		
+			<div class="col-md-4 person-container">
+				<div class="fh5co-person text-center to-animate">
+					<figure><img src="images/justin.png" alt="justin"></figure>
+					<h3>Justin Mah</h3>
+					<span class="fh5co-position">Intern</span>
+					<p>Undergraduate student in psychology at the University of Alberta, Canada. Joins the lab to do studies using the <a href="https://embrlabs.com/">Embr wave</a>.</p>
+					<ul class="social social-circle">
+					
+					</ul>
+				</div>
+			</div>
+		
 		</div>
 	</div>
 </section>
