--- a/public/index.html
+++ b/public/index.html
@@ -766,7 +766,7 @@
 		<div class="container">
 			<div class="">
 				<div class="col-md-12 text-center">
-					<p>Powered by the <a href="https://github.com/saey55/hugo-elate-theme">Elate Hugo port</a>.<br>Blogdown files available on <a href="https://github.com/co-relab/co-relab_source">GitHub</a></p>
+					<p>Powered by the <a href="https://github.com/saey55/hugo-elate-theme">Elate Hugo port</a>.<br>Source (blogdown) files for this page and instructions for use are available on <a href="https://github.com/co-relab/co-relab_source">GitHub</a></p>
 				</div>
 			</div>
 			<div class="row">
