Updated links for preprints and OSF materials in top section. Now, both search for objects authored by "Hans IJzerman" OR "Richard A. Klein". Must update search with new lab members as needed (probably still not an optimal solution, but better than previous).

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
 						<i class="fh5co-intro-icon icon-docs"></i>
 						<h2>Papers</h2>
 						<p>Check out publications and/or preprints from the lab. We try to ensure all our work is available to the public, so if you can&#39;t find a paper let us know!</p>
-						<p><a href="http://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=1923044" class="btn btn-primary">Access Papers</a></p>
+						<p><a href="https://osf.io/preprints/discover?provider=OSFORPsyArXiv&amp;q=%22Richard%20A.%20Klein%22%20OR%20%22Hans%20IJzerman%22" class="btn btn-primary">Access Papers</a></p>
 					</div>
 				</div>
 				
@@ -149,7 +149,7 @@
 						<i class="fh5co-intro-icon icon-folder"></i>
 						<h2>Open Data/Materials</h2>
 						<p>To the extent possible we make materials, data, and analysis scripts publicly available on the Open Science Framework. These may be used for re-analysis or for novel hypotheses.</p>
-						<p><a href="https://osf.io/search/?q=tags:%28%22CORE%20Lab%22%29&amp;page=1" class="btn btn-primary">Find our datasets</a></p>
+						<p><a href="https://osf.io/search/?q=%22Richard%20A.%20Klein%22%20OR%20%22Hans%20IJzerman%22&amp;filter=project&amp;page=1" class="btn btn-primary">Find our datasets</a></p>
 					</div>
 				</div>
 				
