Updated Elisa description

--- a/public/index.html
+++ b/public/index.html
@@ -345,7 +345,7 @@
 					<figure><img src="images/elisa.png" alt="elisa"></figure>
 					<h3><a href="https://www.researchgate.net/profile/Elisa_Sarda">Elisa Sarda</a></h3>
 					<span class="fh5co-position">Postdoc</span>
-					<p>PhD in Psychology from UGA. Manages participant recruitment, translations, and keeps the lab running.</p>
+					<p>PhD in Social Psychology from UGA. Joins the lab to study social thermoregulation, manage participant recruitment, and teach.</p>
 					<ul class="social social-circle">
 					
 						<li><a href="https://www.researchgate.net/profile/Elisa_Sarda"><i class="icon-globe"></i></a></li>
