Changed osf project/data search tag

--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
 						<i class="fh5co-intro-icon icon-folder"></i>
 						<h2>Open Data/Materials</h2>
 						<p>To the extent possible we make materials, data, and analysis scripts publicly available on the Open Science Framework. These may be used for re-analysis or for novel hypotheses.</p>
-						<p><a href="https://osf.io/search/?q=tags:%28corelab%29&amp;filter=project&amp;page=1" class="btn btn-primary">Find our datasets</a></p>
+						<p><a href="https://osf.io/search/?q=tags:%28corelabdat%29&amp;page=1" class="btn btn-primary">Find our datasets</a></p>
 					</div>
 				</div>
 				
