Added google maps api key, renabled map

--- a/public/index.html
+++ b/public/index.html
@@ -720,6 +720,8 @@
 			</div>
 		</div>
 		
+        	<div id="map" class="to-animate"></div>
+		
 	</section>
 
         
@@ -761,6 +763,9 @@
 	<script src="js/jquery.magnific-popup.min.js"></script>
 	<script src="js/magnific-popup-options.js"></script>
 	
+	
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo2ZEZnegFUq93DZ-y_w4uMaIhAhpL--4&sensor=false"></script>
+	<script src="js/google_map.js"></script>
 	
 	
 	<script src="js/main.js"></script>
