--- a/public/index.html
+++ b/public/index.html
@@ -389,6 +389,20 @@
 				</div>
 			</div>
 		
+			<div class="col-md-4 person-container"><br><br> 
+				<div class="fh5co-person text-center to-animate">
+					<figure><img src="images/alessandro.png" alt="Alessandro"></figure>
+					<h3><a href="https://www.researchgate.net/profile/Alessandro_Sparacio">Alessandro Sparacio</a></h3>
+					<span class="fh5co-position">PhD</span>
+					<p>MA in Psychology from the University of Milano-Bicocca. Joins the lab for his PhD, and will work on stress regulation processes.</p>
+					<ul class="social social-circle">
+					
+						<li><a href="https://www.researchgate.net/profile/Alessandro_Sparacio"><i class="icon-globe"></i></a></li>
+					
+					</ul>
+				</div>
+			</div>
+		
 		</div>
 					<div class="row">
 				<div class="col-md-12 text-center to-animate">
