Updated Martin link

--- a/public/index.html
+++ b/public/index.html
@@ -414,7 +414,7 @@
 					<p>Sc.B in medicine at UGA. Joins the lab as an MSc intern and will explore links between social attachment and menopausal hot flashes.</p>
 					<ul class="social social-circle">
 					
-						<li><a href="https://www.researchgate.net/profile/Alessandro_Sparacio"><i class="icon-globe"></i></a></li>
+						<li><a href=""><i class="icon-globe"></i></a></li>
 					
 					</ul>
 				</div>
