change in olivier description

--- a/public/index.html
+++ b/public/index.html
@@ -429,7 +429,7 @@
 					<figure><img src="images/OlivierDujols.png" alt="OlivierDujols"></figure>
 					<h3><a href="https://www.researchgate.net/profile/Olivier_Dujols2">Olivier Dujols</a></h3>
 					<span class="fh5co-position">PhD Student</span>
-					<p>MA in Social Psychology at UGA. Joins the lab for his PhD, and will work on social thermoregulation.</p>
+					<p>MA in Social Psychology at UGA. Joins the lab for his PhD, and will work on social thermoregulation and co-regulation.</p>
 					<ul class="social social-circle">
 					
 						<li><a href="https://www.researchgate.net/profile/Olivier_Dujols2"><i class="icon-globe"></i></a></li>
