--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
 						<i class="fh5co-intro-icon icon-bulb"></i>
 						<h2>Lab Philosophy</h2>
 						<p>Doing science is really hard. Here, we document the workflow of the lab and expectations for lab members. Includes templates for OSF projects to make open science easier.</p>
-						<p><a href="lab_philosophy.docx" class="btn btn-primary">Download</a></p>
+						<p><a href="https://docs.google.com/document/d/1aZWfCIReB9goSiEQcYQGWj70R0NXfQ0cOWKWa3julcA/edit?usp=sharing" class="btn btn-primary">Download</a></p>
 					</div>
 				</div>
 				
@@ -190,6 +190,19 @@
 				</div>
 			</div>
 			<div class="row row-bottom-padded-sm">
+			
+				<div class="col-md-4 col-sm-6 col-xxs-12">
+					<a href="https://docs.google.com/document/d/1aZWfCIReB9goSiEQcYQGWj70R0NXfQ0cOWKWa3julcA/edit?usp=sharing" class="fh5co-project-item to-animate">
+						<img src="images/philo_update_2019.png" alt="Workflow Update" class="img-responsive">
+									<img src="images/announcements.png" class="img-responsive">
+						<div class="fh5co-text">
+						<h2>Annual Workflow Update</h2>
+						<span>9/2019 - We&#39;ve released the 2019 update to our lab philosophy/workflow. Key changes: Sprints, CRediT contributorship, code hygeine.</span>
+						</div>
+					</a>
+				</div>
+
+				<div class="clearfix visible-sm-block"></div>
 			
 				<div class="col-md-4 col-sm-6 col-xxs-12">
 					<a href="https://www.techandrelationships.org" class="fh5co-project-item to-animate">
@@ -289,19 +302,6 @@
 						<div class="fh5co-text">
 						<h2>Oxford Bibliography Guide</h2>
 						<span>5/2018 - Two of our researchers participated in a collaboration to write an Oxford Bibliography on replication initiatives in psychology.</span>
-						</div>
-					</a>
-				</div>
-
-				<div class="clearfix visible-sm-block"></div>
-			
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="https://psyarxiv.com/rtygm" class="fh5co-project-item to-animate">
-						<img src="images/transparency.jpg" alt="Transparency Image" class="img-responsive">
-									<img src="images/publication.png" class="img-responsive">
-						<div class="fh5co-text">
-						<h2>Transparency Guide</h2>
-						<span>6/2018 - One of our researchers participated in a collaboration to write a practical guide for more transparent science.</span>
 						</div>
 					</a>
 				</div>
