add Team Revolution

--- a/public/index.html
+++ b/public/index.html
@@ -192,6 +192,19 @@
 			<div class="row row-bottom-padded-sm">
 			
 				<div class="col-md-4 col-sm-6 col-xxs-12">
+					<a href="https://psysciacc.org/" class="fh5co-project-item to-animate">
+						<img src="images/Team_rev_web.jpg" alt="Workflow Update" class="img-responsive">
+									<img src="images/announcements.png" class="img-responsive">
+						<div class="fh5co-text">
+						<h2>Team Revolution</h2>
+						<span>Patrick Forscher and Hans IJzerman were involved in a major grant proposal (Synergy) to promote the PSA and team science.</span>
+						</div>
+					</a>
+				</div>
+
+				<div class="clearfix visible-sm-block"></div>
+			
+				<div class="col-md-4 col-sm-6 col-xxs-12">
 					<a href="https://docs.google.com/document/d/1aZWfCIReB9goSiEQcYQGWj70R0NXfQ0cOWKWa3julcA/edit?usp=sharing" class="fh5co-project-item to-animate">
 						<img src="images/philo_update_2019.png" alt="Workflow Update" class="img-responsive">
 									<img src="images/announcements.png" class="img-responsive">
