add Patrick alt right publi

--- a/public/index.html
+++ b/public/index.html
@@ -192,12 +192,25 @@
 			<div class="row row-bottom-padded-sm">
 			
 				<div class="col-md-4 col-sm-6 col-xxs-12">
+					<a href="https://journals.sagepub.com/doi/10.1177/1745691619868208" class="fh5co-project-item to-animate">
+						<img src="images/Means%20joined%20plot.png" alt="Profile of the Alt-Right" class="img-responsive">
+									<img src="images/publication.png" class="img-responsive">
+						<div class="fh5co-text">
+						<h2>A Psychological Profile of the Alt-Right</h2>
+						<span>11/2018 - We find that alt-right people are more motivated by group-based dominance than economic anxiety.</span>
+						</div>
+					</a>
+				</div>
+
+				<div class="clearfix visible-sm-block"></div>
+			
+				<div class="col-md-4 col-sm-6 col-xxs-12">
 					<a href="https://psysciacc.org/" class="fh5co-project-item to-animate">
-						<img src="images/Team_rev_web.jpg" alt="Workflow Update" class="img-responsive">
+						<img src="images/Team_rev_web.jpg" alt="Team Revolution" class="img-responsive">
 									<img src="images/announcements.png" class="img-responsive">
 						<div class="fh5co-text">
 						<h2>Team Revolution</h2>
-						<span>Patrick Forscher and Hans IJzerman were involved in a major grant proposal (Synergy) to promote the PSA and team science.</span>
+						<span>10/2018 - Patrick Forscher and Hans IJzerman were involved in a major grant proposal (Synergy) to promote the PSA and team science.</span>
 						</div>
 					</a>
 				</div>
