--- a/public/index.html
+++ b/public/index.html
@@ -526,7 +526,7 @@
 					<figure><img src="images/ade.png" alt="Adeyemi Adetula"></figure>
 					<h3><a>Adeyemi Adetula</a></h3>
 					<span class="fh5co-position">PhD Student</span>
-					<p>M.Sc in Forensic and Correctional Psychology at Nasarawa State University, Keffi, Nigeria. Joins the Lab for his PhD to work on increasing psychology’s generalizability by making it less WEIRD.</p>
+					<p>M.Sc in Forensic and Correctional Psychology at Nasarawa State University, Keffi, Nigeria. Joins the Lab for his PhD to work on increasing psychology’s generalizability.</p>
 					<ul class="social social-circle">
 					
 					</ul>
