--- a/public/index.html
+++ b/public/index.html
@@ -517,6 +517,20 @@
 				</div>
 			</div>
 		
+			<div class="col-md-4 person-container"><br><br> 
+				<div class="fh5co-person text-center to-animate">
+					<figure><img src="images/kashish.png" alt="Kashish Madan"></figure>
+					<h3><a>Kashish Madan</a></h3>
+					<span class="fh5co-position">Intern</span>
+					<p>BE in Computer Science from Manipal University Jaipur, India. Joins the lab as an intern for mobile app development.</p>
+					<ul class="social social-circle">
+					
+						<li><a href=""><i class="icon-globe"></i></a></li>
+					
+					</ul>
+				</div>
+			</div>
+		
 		</div>
 					<div class="row">
 				<div class="col-md-12 text-center to-animate">
