link bio Kashish

--- a/public/index.html
+++ b/public/index.html
@@ -525,7 +525,7 @@
 					<p>BE in Computer Science from Manipal University Jaipur, India. Joins the lab as an intern for mobile app development.</p>
 					<ul class="social social-circle">
 					
-						<li><a href=""><i class="icon-globe"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/kashishmadan"><i class="icon-globe"></i></a></li>
 					
 					</ul>
 				</div>
