--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
 							<h1 class="to-animate">Co-Regulation (CORE) Lab.</h1>
 							<h2 class="to-animate">We study co-regulation in romantic relationships. We study social thermoregulation. We do meta-science. We rely on open science ideals. We collaborate with researchers around the world, but are located at the <a href="https://www.univ-grenoble-alpes.fr">Université Grenoble Alpes</a>.</h2>
 							<br>
-							<h2 class="to-animate"><img src="logos.png"></h2>
+							<h2 class="to-animate"><img src="new logos.png"></h2>
 						</div>
 					</div>
 				</div>
